<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.parameter.DailyHistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--  CARD HEADER  -->
        <LinearLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_primary"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dissolved_oxygen"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/daily_average"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/do_dummy"
                android:textColor="@color/white"
                android:textSize="52sp" />

            <TextView
                android:id="@+id/tv_max_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/max_min_dummy"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--  SETTINGS  -->
    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraint_layout"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/history"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_records"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_history"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/history_card" />

</RelativeLayout>