<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_primary"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/blue_primary"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/CardTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/card_title" />

            <TextView
                android:id="@+id/tv_item_value"
                style="@style/CardTextValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_item_icon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/parameter_icon"
            android:src="@drawable/oxygen_icon" />

    </LinearLayout>

</androidx.cardview.widget.CardView>